Chapter-3/Part-2/e-2.03/infra/manifests/log-output-be-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  labels:
    app: log-output-be
    version: "2.03"
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-be
      version: "2.03"
      component: backend
  template:
    metadata:
      labels:
        app: log-output-be
        version: "2.03"
        component: backend
    spec:
      containers:
        - name: log-output-be-ctr
          image: michaelangelovalente/log_output-img:ex2.03
          ports:
            - name: http-logoutput
              containerPort: 8095
              protocol: TCP
