Chapter-3/Part-2/e-2.03/infra/manifests/ping-pong-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-pong-dep
  labels:
    app: ping-pong-be
    version: "2.03"
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-be
      version: "2.03"
      component: backend
  template:
    metadata:
      namespace: exercises
      labels:
        app: ping-pong-be
        version: "2.03"
        component: backend
    spec:
      containers:
        - name: ping-pong-be-ctr
          image: michaelangelovalente/ping_pong_img:ex2.03
          ports:
            - name: http-ping-pong
              containerPort: 8096
              protocol: TCP
