Chapter-3/Part-2/e-2.03/infra/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-pp-ingress
spec:
  rules:
    - http:
        paths:
          - path: / # matches app base path for endpoint
            pathType: Prefix
            backend:
              service:
                name: log-output-pp-svc
                port:
                  number: 2355
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 2366
